# BayesAdapt

./: .gitignore  README.md  active_learn.py  active_test.py  binary_search.py  blob.sh  blob_layers.py  config.yaml  convert_dataset.py  debug_slake.py  download_slake.py  evaluate.py  evaluate_ivon.py  full_cov.py  generate_figures.py  generate_table.py  generate_tables.py  ivon.sh  laplace_trainer.py  length_check.py  mcdropout.sh  mle.sh  mnist_test.py  noise_test.py  noisy_example.py  parse_logs.py  pyproject.toml  qwen3_debug.py  run.sh  run_test.sh  scalabl.sh  scalabl_layers.py  schedulers.py  split_mmlupro.py  tempscale.sh  test_gpt.py  test_laplace.py  tfb.sh  train.py  train_and_evaluate.py  (+9 more)
bayesadapt/: optimizer.py  utils.py
citations/: README.md
conf/: config.yaml  default.yaml  mle.yaml  train_blob.yaml  train_blob_ll.yaml  train_deepensemble.yaml  train_mcdropout.yaml  train_scabal.yaml  train_scalabl.yaml  train_scalabl_bb.yaml  train_scalabl_ll.yaml
dataset/: S2SDataset_Classification_hydra.py
laplace-lora/: .gitignore  ece.py  eval.py  eval_all.sh  run_gpt.py  run_gpt.sh  run_gpt_laplace.py  run_gpt_laplace.sh
lorawrappers/: __init__.py  blob.py  deepensemble.py  lorawrapper.py  lorawrappers.py  mcdropout.py  scalabl.py  scalabl_td.py  utils.py  viwrapper.py
models/: causallm.py
modelwrappers/: blob.py  scalabl.py  wrapperbase.py
notebooks/: Untitled.ipynb  entropy.ipynb  flows.ipynb  parse_logs.ipynb
run/: eval.py  evaluate.py  main.py  train.py
scripts/: eval.sh  ivon.sh  laplace.sh  mle.sh  run.sh  run_laplace.sh  scalabl.sh  sgld.sh  (+4 more)
(+213 files in other folders)
